@@ -10,6 +10,10 @@ package org.opensearch.searchrelevance.metrics;
 import static org.opensearch.searchrelevance.common.MetricsConstants.METRICS_PAIRWISE_COMPARISON_FIELD_NAME;
 import static org.opensearch.searchrelevance.common.MetricsConstants.PAIRWISE_FIELD_NAME_A;
 import static org.opensearch.searchrelevance.common.MetricsConstants.PAIRWISE_FIELD_NAME_B;
+import static org.opensearch.searchrelevance.common.PluginConstants.DASHBOARD_APPLICATION_NAME;
+import static org.opensearch.searchrelevance.common.PluginConstants.DASHBOARD_KEY_PREFIX;
+import static org.opensearch.searchrelevance.common.PluginConstants.DASHBOARD_SEARCH_CONFIG_KEY;
+import static org.opensearch.searchrelevance.common.PluginConstants.DASHBOARD_QUERY_SET_KEY;
 import static org.opensearch.searchrelevance.experiment.QuerySourceUtil.createDefinitionOfTemporarySearchPipeline;
 import static org.opensearch.searchrelevance.metrics.EvaluationMetrics.calculateEvaluationMetrics;
 import static org.opensearch.searchrelevance.metrics.PairwiseComparisonMetrics.calculatePairwiseMetrics;
@@ -38,7 +42,9 @@ import org.opensearch.search.SearchHit;
 import org.opensearch.searchrelevance.dao.EvaluationResultDao;
 import org.opensearch.searchrelevance.dao.ExperimentVariantDao;
 import org.opensearch.searchrelevance.dao.JudgmentDao;
+import org.opensearch.searchrelevance.dao.DashboardEvaluationResultDao;
 import org.opensearch.searchrelevance.model.AsyncStatus;
+import org.opensearch.searchrelevance.model.DashboardEvaluationResult;
 import org.opensearch.searchrelevance.model.EvaluationResult;
 import org.opensearch.searchrelevance.model.ExperimentVariant;
 import org.opensearch.searchrelevance.model.builder.SearchRequestBuilder;
@@ -58,6 +64,7 @@ public class MetricsHelper {
     private final JudgmentDao judgmentDao;
     private final EvaluationResultDao evaluationResultDao;
     private final ExperimentVariantDao experimentVariantDao;
+    private final DashboardEvaluationResultDao dashboardEvaluationResultDao;
 
     @Inject
     public MetricsHelper(
@@ -65,13 +72,15 @@ public class MetricsHelper {
         @NonNull Client client,
         @NonNull JudgmentDao judgmentDao,
         @NonNull EvaluationResultDao evaluationResultDao,
-        @NonNull ExperimentVariantDao experimentVariantDao
+        @NonNull ExperimentVariantDao experimentVariantDao,
+        @NonNull DashboardEvaluationResultDao dashboardEvaluationResultDao
     ) {
         this.clusterService = clusterService;
         this.client = client;
         this.judgmentDao = judgmentDao;
         this.evaluationResultDao = evaluationResultDao;
         this.experimentVariantDao = experimentVariantDao;
+        this.dashboardEvaluationResultDao = dashboardEvaluationResultDao;
     }
 
     /**
@@ -176,9 +185,10 @@ public class MetricsHelper {
         Map<String, List<String>> indexAndQueries,
         int size,
         List<String> judgmentIds,
-        ActionListener<Map<String, Object>> listener
+        ActionListener<Map<String, Object>> listener,
+        String experimentId
     ) {
-        processEvaluationMetrics(queryText, indexAndQueries, size, judgmentIds, listener, List.of());
+        processEvaluationMetrics(queryText, indexAndQueries, size, judgmentIds, listener, Collections.emptyList(), experimentId);
     }
 
     public void processEvaluationMetrics(
@@ -187,7 +197,8 @@ public class MetricsHelper {
         int size,
         List<String> judgmentIds,
         ActionListener<Map<String, Object>> listener,
-        List<ExperimentVariant> experimentVariants
+        List<ExperimentVariant> experimentVariants,
+        String experimentId
     ) {
         if (indexAndQueries.isEmpty() || judgmentIds.isEmpty()) {
             listener.onFailure(new IllegalArgumentException("Missing required parameters"));
@@ -236,7 +247,8 @@ public class MetricsHelper {
                                     docIdToScores,
                                     configToEvalIds,
                                     listener,
-                                    experimentVariants
+                                    experimentVariants,
+                                    experimentId
                                 );
                             }
                         } catch (Exception e) {
@@ -260,7 +272,8 @@ public class MetricsHelper {
                                     docIdToScores,
                                     configToEvalIds,
                                     listener,
-                                    experimentVariants
+                                    experimentVariants,
+                                    experimentId
                                 );
                             }
                         }
@@ -281,7 +294,8 @@ public class MetricsHelper {
         Map<String, String> docIdToScores,
         Map<String, Object> configToEvalIds,
         ActionListener<Map<String, Object>> listener,
-        List<ExperimentVariant> experimentVariants
+        List<ExperimentVariant> experimentVariants,
+        String experimentId
     ) {
         AtomicBoolean hasFailure = new AtomicBoolean(false);
         AtomicInteger pendingConfigurations = getNumberOfExperimentRuns(indexAndQueries, experimentVariants);
@@ -291,6 +305,10 @@ public class MetricsHelper {
         }
 
         for (String searchConfigurationId : indexAndQueries.keySet()) {
+            if (searchConfigurationId.startsWith(DASHBOARD_KEY_PREFIX)) {
+                continue;
+            }
+
             if (hasFailure.get()) {
                 return;
             }
@@ -298,6 +316,8 @@ public class MetricsHelper {
             String index = indexAndQueries.get(searchConfigurationId).get(0);
             String query = indexAndQueries.get(searchConfigurationId).get(1);
             String searchPipeline = indexAndQueries.get(searchConfigurationId).get(2);
+            String dashboardSearchConfigName = indexAndQueries.get(DASHBOARD_SEARCH_CONFIG_KEY).get(0);
+            String dashboardQuerySetName = indexAndQueries.get(DASHBOARD_QUERY_SET_KEY).get(0);
 
             if (Objects.isNull(experimentVariants) || experimentVariants.isEmpty()) {
                 processSearchConfigurationWithEmptyExperimentOptions(
@@ -311,8 +331,11 @@ public class MetricsHelper {
                     index,
                     query,
                     searchPipeline,
+                    dashboardSearchConfigName,
+                    dashboardQuerySetName,
                     hasFailure,
-                    pendingConfigurations
+                    pendingConfigurations,
+                    experimentId
                 );
             } else {
                 processSearchConfigurationWithHybridExperimentOptions(
@@ -359,8 +382,11 @@ public class MetricsHelper {
         String index,
         String query,
         String searchPipeline,
+        String dashboardSearchConfigName,
+        String dashboardQuerySetName,
         AtomicBoolean hasFailure,
-        AtomicInteger pendingConfigurations
+        AtomicInteger pendingConfigurations,
+        String experimentId
     ) {
         SearchRequest searchRequest = buildSearchRequest(index, query, queryText, searchPipeline, size);
         final String evaluationId = UUID.randomUUID().toString();
@@ -409,6 +435,34 @@ public class MetricsHelper {
                         hasFailure.set(true);
                         listener.onFailure(error);
                     }));
+
+                    // Create dashboard evaluation results for all metrics
+                    metrics.forEach((metricName, metricValue) -> {
+                        final String resultId = UUID.randomUUID().toString();
+
+                        // Use experimentId rather than evaluationId
+                        // In the Dashboards, an evaluation refers to an experiment, therefore that is what we use
+                        DashboardEvaluationResult dashboardEvaluationResult = new DashboardEvaluationResult(
+                            resultId,
+                            TimeUtils.getTimestamp(),
+                            dashboardSearchConfigName,
+                            dashboardQuerySetName,
+                            queryText,
+                            metricName,
+                            metricValue,
+                            DASHBOARD_APPLICATION_NAME,
+                            experimentId
+                        );
+
+                        // Store dashboard evaluation result
+                        dashboardEvaluationResultDao.putDashboardEvaluationResult(
+                            dashboardEvaluationResult,
+                            ActionListener.wrap(
+                                success -> log.debug("Successfully stored dashboard evaluation result for evaluation ID: {} and metric: {}", evaluationId, metricName),
+                                error -> log.error("Failed to store dashboard evaluation result for evaluation ID: {} and metric: {}", evaluationId, metricName, error)
+                            )
+                        );
+                    });
                 } catch (Exception e) {
                     hasFailure.set(true);
                     listener.onFailure(e);
